client/src/pages/read/read.module.css
.header {
	display: flex;
	flex-direction: column;
	padding: 20px 5vw;
}

.title {
	color: rgba(255, 255, 255, 0.7);
	padding: 10px 0;
	font-weight: 100;
	height: 52px;
}

.container {
	height: 2.3em;
	display: flex;
	justify-content: space-between;
}

.pagination {
	text-decoration: none;
	display: inline-flex;
	align-items: center;
	justify-content: center;

	border: 1px solid #222;
	background: transparent;
	border-radius: 4px;
	font-family: inherit;
	transition: box-shadow, background 0.2s;
	user-select: none;
}

.pagination[disabled] {
	opacity: 0.3;
	user-select: none;
	pointer-events: none;
}

.pagination:not([disabled]):hover {
	box-shadow: 0 1px 3px rgb(0 0 0 / 50%);
	background: #303030;
	cursor: pointer;
}

.header button,
.header a {
	height: 100%;
}

.header button svg,
.header a svg {
	height: 100%;
	padding: 5px;
}

.pagination.icon svg {
	padding: 5px 8px;
}

.pagination span {
	color: #eee;
	padding: 5px;
	width: 50px;
}

.pagination:nth-child(1) span {
	padding-right: 10px;
}

.pagination:nth-child(3) span {
	padding-left: 10px;
}

.chapters {
	background: var(--bg-01dp);
	margin: 10px auto;
	transition: width 0.3s;
}

.imageContainer {
	width: 100%;
}

.chapters img {
	width: 100%;
}

.imageContainer[data-isloaded='false'] {
	height: 100vh;
	width: 10px;
}

/* @media only screen and (max-width: 600px) {
	.chapters {
		padding: 0;
		max-width: 100vw;
		width: 100vw;
	}
} */

